package com.narxoz.rpg.equipment;

public interface Armor {
    int getDefense();
    String getArmorInfo();
    String getArmorType();
    void displayInfo();
}

