package com.narxoz.rpg.equipment;

public interface Weapon {
    int getDamage();
    String getWeaponInfo();
    String getWeaponType();
    void displayInfo();
}

